# narrative-ai

./: .env.example  .gitignore  README.md  SKILLS_ANALYSIS_ISSUES.md  arch.json  capacitor.config.json  index.html  jsconfig.json  main-worktree-verification-for-caption-optimization.md  main.js  package-lock.json  package.json  style.css  tailwind.config.js  vite.config.js
.gemini/: develop-plan.md  systemprompt.md
.maestro/: config.yaml
backend/: .env.example  README.md  pyproject.toml  run.py  skills-lock.yaml  skills.yaml
backend/app/: __init__.py  config.py  main.py
backend/app/models/: schemas.py
backend/app/routers/: account.py  geo.py  narrative.py  synonyms.py
backend/app/services/: gemini.py  geocoding.py
backend/app/utils/: prompts.py
backend/scripts/: skm.sh
control/: README.md
docs/: HANDOFF.md  demo-checklist.md  github-readiness-checklist.md  release-checklist.md
public/: privacy_policy.html  terms_of_service.html
src/: index.js
supabase/: setup.sql
templates/: gitmessages
test_log/: 2026-02-16_perf_experiments_round2.md  2026-02-16_perf_render_lab_setup.md  2026-02-17_backend_image_normalization_validation.md  2026-03-03_render_backend_benchmark_round3.md  2026-03-04_ab_main_vs_norm_off_round1.md  2026-03-04_one-day_detailed_test_plan.md  2026-03-04_one-day_detailed_test_runbook_v2.md  2026-03-04_performance_first_hypotheses.md  2026-03-04_search_keyword_plan_performance_first.md  2026-03-04_search_results_round1.md  2026-03-04_search_results_round2.md  2026-03-04_search_results_round3.md  2026-03-05_mvp_release_blockers_20q.md  (+32 more)
(+189 files in other folders)
